# client-server-cpp

./: CMakeLists.txt
client/include/: Client.h  PatientCard.h  ResponseParser.h
client/src/: CMakeLists.txt  Client.cpp  ResponseParser.cpp  main.cpp
patients/: 1.txt  2.txt  3.txt  4.txt
server/include/: CardParser.h  PatientCard.h  Queue.h  Server.h  Stack.h
server/src/: CMakeLists.txt  CardParser.cpp  Server.cpp  main.cpp
